{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 194,
  "lineage": "96658031-8b3b-b656-dc94-67851ba444cf",
  "resources": [
    {
      "module": "module.subnets",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:574124503382:vpc/vpc-01e18b20cc45528d6",
            "cidr_block": "172.16.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-08e3f33f2bd45b65a",
                "cidr_block": "172.16.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-2113f94a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01e18b20cc45528d6",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0fb62a885ab69dadb",
            "ipv6_cidr_block": "2406:da1a:2de:1c00::/56",
            "main_route_table_id": "rtb-08a0194ec91e1f732",
            "owner_id": "574124503382",
            "state": "available",
            "tags": {
              "Name": "eg-test-rds-test",
              "Namespace": "eg",
              "Stage": "test"
            }
          }
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat_instance",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0c0f22ebd1c0edced",
            "owner_id": "574124503382",
            "tags": {
              "Name": "eg-test-rds-test",
              "Namespace": "eg",
              "Stage": "test"
            },
            "vpc_id": "vpc-01e18b20cc45528d6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0377b4d1c583a888e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "574124503382",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-07ac22e60ffc743fc",
              "subnet-093b2f2da6a73b345"
            ],
            "tags": {
              "Attributes": "private",
              "Name": "eg-test-rds-test",
              "Namespace": "eg",
              "Stage": "test",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-01e18b20cc45528d6"
          },
          "dependencies": [
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-007bd83da24507a11",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "574124503382",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-09330cec85c5d2975",
              "subnet-09c0c8e1e90b5d19e"
            ],
            "tags": {
              "Attributes": "public",
              "Name": "eg-test-rds-test",
              "Namespace": "eg",
              "Stage": "test",
              "cpco.io/subnet/type": "public"
            },
            "vpc_id": "vpc-01e18b20cc45528d6"
          },
          "dependencies": [
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_instance",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c0f22ebd1c0edced",
            "id": "r-rtb-03e39960bf8b5fc5d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03e39960bf8b5fc5d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0da33e19a8de425c1",
            "owner_id": "574124503382",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "private",
              "Name": "eg-test-rds-test-private-ap-south-1a",
              "Namespace": "eg",
              "Stage": "test",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-01e18b20cc45528d6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0313a91396200f2a3",
            "owner_id": "574124503382",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "private",
              "Name": "eg-test-rds-test-private-ap-south-1b",
              "Namespace": "eg",
              "Stage": "test",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-01e18b20cc45528d6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03e39960bf8b5fc5d",
            "owner_id": "574124503382",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c0f22ebd1c0edced",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Attributes": "public",
              "Name": "eg-test-rds-test",
              "Namespace": "eg",
              "Stage": "test",
              "cpco.io/subnet/type": "public"
            },
            "vpc_id": "vpc-01e18b20cc45528d6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b90b22abe19486d",
            "route_table_id": "rtb-0da33e19a8de425c1",
            "subnet_id": "subnet-093b2f2da6a73b345"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e327a7b7a2618b30",
            "route_table_id": "rtb-0313a91396200f2a3",
            "subnet_id": "subnet-07ac22e60ffc743fc"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c620577ec984be01",
            "route_table_id": "rtb-03e39960bf8b5fc5d",
            "subnet_id": "subnet-09c0c8e1e90b5d19e"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f400a0a5738ef8a",
            "route_table_id": "rtb-03e39960bf8b5fc5d",
            "subnet_id": "subnet-09330cec85c5d2975"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_default",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.rds_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:574124503382:security-group/sg-0046a4e8de0e30dad",
            "description": "Allow inbound traffic from the security groups",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0046a4e8de0e30dad",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow inbound traffic from existing Security Groups",
                "from_port": 1521,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0721f6cc0855082b1"
                ],
                "self": false,
                "to_port": 1521
              }
            ],
            "name": "eg-test-rds-test",
            "name_prefix": null,
            "owner_id": "574124503382",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eg-test-rds-test",
              "Namespace": "eg",
              "Stage": "test"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e18b20cc45528d6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat_instance",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.rds_instance",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-2278822011",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0046a4e8de0e30dad",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.rds_instance.aws_security_group.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.rds_instance",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_cidr_blocks",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.rds_instance",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_security_groups",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow inbound traffic from existing Security Groups",
            "from_port": 1521,
            "id": "sgrule-628747871",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0046a4e8de0e30dad",
            "self": false,
            "source_security_group_id": "sg-0721f6cc0855082b1",
            "to_port": 1521,
            "type": "ingress"
          },
          "dependencies": [
            "module.rds_instance.aws_security_group.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nat_instance_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nat_instance_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:574124503382:subnet/subnet-093b2f2da6a73b345",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.0.0/19",
            "id": "subnet-093b2f2da6a73b345",
            "map_public_ip_on_launch": false,
            "owner_id": "574124503382",
            "tags": {
              "Attributes": "private",
              "Name": "eg-test-rds-test-private-ap-south-1a",
              "Namespace": "eg",
              "Stage": "test",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-01e18b20cc45528d6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:574124503382:subnet/subnet-07ac22e60ffc743fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.32.0/19",
            "id": "subnet-07ac22e60ffc743fc",
            "map_public_ip_on_launch": false,
            "owner_id": "574124503382",
            "tags": {
              "Attributes": "private",
              "Name": "eg-test-rds-test-private-ap-south-1b",
              "Namespace": "eg",
              "Stage": "test",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-01e18b20cc45528d6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:574124503382:subnet/subnet-09c0c8e1e90b5d19e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.96.0/19",
            "id": "subnet-09c0c8e1e90b5d19e",
            "map_public_ip_on_launch": true,
            "owner_id": "574124503382",
            "tags": {
              "Attributes": "public",
              "Name": "eg-test-rds-test-public-ap-south-1a",
              "Namespace": "eg",
              "Stage": "test",
              "cpco.io/subnet/type": "public"
            },
            "vpc_id": "vpc-01e18b20cc45528d6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:574124503382:subnet/subnet-09330cec85c5d2975",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.128.0/19",
            "id": "subnet-09330cec85c5d2975",
            "map_public_ip_on_launch": true,
            "owner_id": "574124503382",
            "tags": {
              "Attributes": "public",
              "Name": "eg-test-rds-test-public-ap-south-1b",
              "Namespace": "eg",
              "Stage": "test",
              "cpco.io/subnet/type": "public"
            },
            "vpc_id": "vpc-01e18b20cc45528d6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:574124503382:vpc/vpc-01e18b20cc45528d6",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0901a10b5e871848c",
            "default_route_table_id": "rtb-08a0194ec91e1f732",
            "default_security_group_id": "sg-0721f6cc0855082b1",
            "dhcp_options_id": "dopt-2113f94a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01e18b20cc45528d6",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0fb62a885ab69dadb",
            "ipv6_cidr_block": "2406:da1a:2de:1c00::/56",
            "main_route_table_id": "rtb-08a0194ec91e1f732",
            "owner_id": "574124503382",
            "tags": {
              "Name": "eg-test-rds-test",
              "Namespace": "eg",
              "Stage": "test"
            }
          }
        }
      ]
    }
  ]
}